The responsive layout error on mobile screens has been fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .projects-section {
   width: 100%;
   padding: 2rem 1rem;
